--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,103 @@
 name: nedd
-channels: [conda-forge]
+channels:
+  - defaults
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - python=3.11
-  - numpy
-  - pandas
-  - scipy
-  - scikit-learn
-  - jupyter
-  - matplotlib
-  - pip
+  - bzip2=1.0.8=h80987f9_6
+  - ca-certificates=2025.9.9=hca03da5_0
+  - expat=2.7.1=h313beb8_0
+  - libcxx=20.1.8=h8869778_0
+  - libffi=3.4.4=hca03da5_1
+  - libzlib=1.3.1=h5f15de7_0
+  - ncurses=6.5=hee39554_0
+  - openssl=3.0.17=h4ee41c1_0
+  - pip=25.2=pyhc872135_0
+  - python=3.11.13=h19e8193_0
+  - readline=8.3=h0b18652_0
+  - setuptools=78.1.1=py311hca03da5_0
+  - sqlite=3.50.2=h79febb2_1
+  - tk=8.6.15=hcd8a7d5_0
+  - wheel=0.45.1=py311hca03da5_0
+  - xz=5.6.4=h80987f9_1
+  - zlib=1.3.1=h5f15de7_0
+  - pip:
+      - altair==5.5.0
+      - annotated-types==0.7.0
+      - anthropic==0.67.0
+      - anyio==4.10.0
+      - attrs==25.3.0
+      - black==25.1.0
+      - blinker==1.9.0
+      - cachetools==6.2.0
+      - certifi==2025.8.3
+      - cfgv==3.4.0
+      - charset-normalizer==3.4.3
+      - click==8.2.1
+      - contourpy==1.3.3
+      - cycler==0.12.1
+      - distlib==0.4.0
+      - distro==1.9.0
+      - et-xmlfile==2.0.0
+      - filelock==3.19.1
+      - flake8==7.3.0
+      - fonttools==4.59.2
+      - gitdb==4.0.12
+      - gitpython==3.1.45
+      - h11==0.16.0
+      - httpcore==1.0.9
+      - httpx==0.28.1
+      - identify==2.6.14
+      - idna==3.10
+      - isort==6.0.1
+      - jinja2==3.1.6
+      - jiter==0.10.0
+      - joblib==1.5.2
+      - jsonschema==4.25.1
+      - jsonschema-specifications==2025.9.1
+      - kiwisolver==1.4.9
+      - markupsafe==3.0.2
+      - matplotlib==3.10.6
+      - mccabe==0.7.0
+      - mypy-extensions==1.1.0
+      - narwhals==2.5.0
+      - nodeenv==1.9.1
+      - numpy==2.3.3
+      - openpyxl==3.1.5
+      - packaging==25.0
+      - pandas==2.3.2
+      - pathspec==0.12.1
+      - pillow==11.3.0
+      - platformdirs==4.4.0
+      - pre-commit==4.3.0
+      - protobuf==6.32.1
+      - pyarrow==21.0.0
+      - pycodestyle==2.14.0
+      - pydantic==2.11.7
+      - pydantic-core==2.33.2
+      - pydeck==0.9.1
+      - pyflakes==3.4.0
+      - pyparsing==3.2.3
+      - python-dateutil==2.9.0.post0
+      - pytz==2025.2
+      - pyyaml==6.0.2
+      - referencing==0.36.2
+      - requests==2.32.5
+      - rpds-py==0.27.1
+      - scikit-learn==1.7.2
+      - scipy==1.16.2
+      - seaborn==0.13.2
+      - six==1.17.0
+      - smmap==5.0.2
+      - sniffio==1.3.1
+      - streamlit==1.49.1
+      - tenacity==9.1.2
+      - threadpoolctl==3.6.0
+      - toml==0.10.2
+      - tornado==6.5.2
+      - typing-extensions==4.15.0
+      - typing-inspection==0.4.1
+      - tzdata==2025.2
+      - urllib3==2.5.0
+      - virtualenv==20.34.0
+prefix: /Users/vv3/miniconda3/envs/nedd
