--- a/.github/workflows/pack-win.yml
+++ b/.github/workflows/pack-win.yml
@@ -1,4 +1,4 @@
-name: Build portable Windows env (conda-pack)
+name: Build portable Windows env (micromamba + conda-pack)
 
 on:
   workflow_dispatch:
@@ -12,25 +12,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Miniconda
-        uses: conda-incubator/setup-miniconda@v3
+      # Provision micromamba and create env from your YAML
+      - name: Setup micromamba
+        uses: mamba-org/setup-micromamba@v1
         with:
-          channels: conda-forge,defaults
-          python-version: "3.11"
+          micromamba-version: "latest"
           environment-file: env/environment.windows.yml
-          activate-environment: nedd
-          auto-update-conda: true
+          environment-name: nedd
+          create-args: >-
+            -c conda-forge -c defaults
 
+      # Install conda-pack into the env
       - name: Install conda-pack
-        shell: bash
-        run: conda install -y -n nedd -c conda-forge conda-pack
+        shell: bash -l {0}
+        run: |
+          micromamba install -y -n nedd -c conda-forge conda-pack
+          micromamba run -n nedd python -c "import conda_pack; print('conda-pack OK:', conda_pack.__version__)"
 
+      # Pack the env (module form is shell-agnostic)
       - name: Pack environment
-        shell: bash
-        run: conda pack -n nedd -o nedd_env.zip
+        shell: bash -l {0}
+        run: |
+          micromamba run -n nedd python -m conda_pack -o nedd_env.zip
+          ls -lh nedd_env.zip
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: nedd_env
           path: nedd_env.zip
+
